data sender interface and class

--- a/server/Makefile
+++ b/server/Makefile
@@ -5,13 +5,13 @@
 CXX = g++
 CXXFLAGS=-Wall -Wextra -g -O1 -std=c++11 -lboost_system -lboost_filesystem
 
-SRC_FILES = server-example.cpp
+SRC_FILES = server-example.cpp ChunkedDataSender.cpp
 TARGETS = server-example
 
 all: $(TARGETS)
 
-server-example: $(SRC_FILES)
-	$(CXX) $(CXXFLAGS) -o $@ $^
+server-example: $(SRC_FILES) ChunkedDataSender.h
+	$(CXX) $(CXXFLAGS) -o $@ $(SRC_FILES)
 
 clean:
 	rm -f $(TARGETS)
