--- a/server/Makefile
+++ b/server/Makefile
@@ -1,16 +1,12 @@
-# This makefile compiles the server example.
-# You should modify it to also compile a program called jukebox-server.
-# jukebox-server will be the server implementation of your Jukebox.
-
 CXX = g++
 CXXFLAGS=-Wall -Wextra -g -O1 -std=c++11 -lboost_system -lboost_filesystem
 
-SRC_FILES = server-example.cpp ChunkedDataSender.cpp ConnectedClient.cpp
-TARGETS = server-example
+SRC_FILES = jukebox-server.cpp ChunkedDataSender.cpp ConnectedClient.cpp
+TARGETS = jukebox-server
 
 all: $(TARGETS)
 
-server-example: $(SRC_FILES) ChunkedDataSender.h ConnectedClient.h
+jukebox-server: $(SRC_FILES) ChunkedDataSender.h ConnectedClient.h
 	$(CXX) $(CXXFLAGS) -o $@ $(SRC_FILES)
 
 clean:
